--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fleshel/assembler-webserver#readme",
   "dependencies": {
+    "amqplib": "^0.8.0",
     "redis": "^4.0.4"
   }
 }
