--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/fleshel/assembler-webserver#readme",
   "dependencies": {
     "amqplib": "^0.8.0",
+    "dotenv": "^16.0.0",
     "redis": "^4.0.4"
   }
 }
